--- a/product-list-page.html
+++ b/product-list-page.html
@@ -80,13 +80,102 @@
             </div>
         </nav>
     </header>
-    <section class="section stock-products">
+    <section class="section filter-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-3 col-md-3 col-12">
-
+                <div class="col-lg-3 col-12">
+                    <div class="filter-wrapper">
+                        <form action="">
+                            <input type="reset" value="очистить филтер" class="btn-primary btn w-100">
+                            <hr>
+                            <div class="filter-content">
+                                <strong>brand name</strong>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                    <label class="form-check-label" for="defaultCheck1">
+                                      Default checkbox
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <label class="form-check-label" for="defaultCheck2">
+                                      Default checkbox
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
+                                    <label class="form-check-label" for="defaultCheck3">
+                                      Default checkbox
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck4">
+                                    <label class="form-check-label" for="defaultCheck4">
+                                      Default checkbox
+                                    </label>
+                                </div>
+                                <hr>
+                            </div>
+                            <div class="filter-content">
+                                <strong>что то</strong>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                                    <label class="form-check-label" for="exampleRadios1">
+                                      Default radio
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" checked>
+                                    <label class="form-check-label" for="exampleRadios2">
+                                      Default radio
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" checked>
+                                    <label class="form-check-label" for="exampleRadios3">
+                                      Default radio
+                                    </label>
+                                </div>
+                                <hr>
+                            </div>
+                            <div class="filter-content">
+                                <strong>размер</strong>
+                                <div class="form-row">
+                                    <div class="col">
+                                      <input type="number" class="form-control" placeholder="высота">
+                                    </div>
+                                    <div class="col">
+                                      <input type="number" class="form-control" placeholder="длина">
+                                    </div>
+                                    <div class="col">
+                                      <input type="number" class="form-control" placeholder="ширина">
+                                    </div>
+                                </div>
+                                <hr>
+                            </div>
+                            <div class="filter-content">
+                                <strong>цена</strong>
+                                <div class="slidecontainer">
+                                    <input type="range" min="1" max="100000" value="50000" class="slider" id="myRange">
+                                    <p><span id="demo"></span>руб.</p>
+                                </div>
+                                <div class="form-row mt-3">
+                                    <div class="col">
+                                      <input type="number" class="form-control" placeholder="максимум">
+                                    </div>
+                                    <div class="col-auto align-items-center d-flex">
+                                        <span>-</span>
+                                    </div>
+                                    <div class="col">
+                                      <input type="number" class="form-control" placeholder="миниму">
+                                    </div>
+                                </div>
+                                <hr>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-lg-9 col-md-9 col-12">
+                <div class="col-lg-9 col-12">
                     <div class="product-list item-slider">
                         <div class="card-item">
                             <div class="card product-wrpper">
